# contract_services

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  swagger.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_drop_contract_sla.py  0003_add_compatibility_tracking_fields.py
app/: main.py
app/api/: __init__.py  deps.py  errors.py  metrics.py
app/api/routers/: __init__.py  contracts.py  introspection.py  publish.py  system.py  validation.py
app/auth/: __init__.py  security.py
app/compatibility/: __init__.py  diff.py  rules.py
app/config/: settings.py
app/db/: __init__.py  models.py  session.py
app/logging/: __init__.py  setup.py
app/schemas/: __init__.py  common.py  contract.py  enums.py  introspection.py  validation.py  version.py
app/service/: __init__.py  compatibility.py  contracts.py  introspection.py  utils.py  validation.py  versions.py
app/validators/: __init__.py  contract_schema.py
scripts/: generate_swagger.py
tests/: conftest.py
tests/integration/: test_api.py  test_introspection_api.py
tests/unit/: test_compatibility.py  test_introspection_mapping.py  test_schema_validator.py
